# httpinspect

./: Dockerfile  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yml
client/: .eslintrc.cjs  .eslintrc.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json
client/src/: App.tsx
client/src/components/: Combobox.tsx  Command.tsx  Dialog.tsx  Input.tsx  Popover.tsx  Toast.tsx  Toaster.tsx
server/: alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 3199ecb1f84a_init.py
server/httpinspect/: __main__.py  app.py  database.py  endpoint.py  main.py  static.py
server/httpinspect/api/: api.py
server/httpinspect/models/: endpoint.py  request.py  user.py
server/httpinspect/router/: auth.py  endpoints.py  requests.py
server/httpinspect/schemas/: endpoint.py  request.py  user.py
server/httpinspect/services/: endpoint.py  request.py  user.py
